# scindo-models

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.onnxruntime-trt  Dockerfile.triton
models/: pp_doclayout_v3.toml  registry.toml
serving/triton/preprocessors/pp_doclayout_v3/: CMakeLists.txt  Makefile  config.pbtxt.in  contract.toml
serving/triton/preprocessors/pp_doclayout_v3/src/: backend.cc  constants.h  nvimgcodec_raii.h  preprocess.cc  preprocess.h
serving/triton/preprocessors/pp_doclayout_v3_python/: Makefile  config.pbtxt.in  contract.toml  model.py
src/scindo_models/: __init__.py  artifacts.py  cli.py  load.py  model_spec.py  optimize.py  registry.py  registry_schema.py
src/scindo_models/artifacts/: __init__.py  base.py  onnx_model.py  onnxruntime_bundle.py  reader.py  triton_model.py
src/scindo_models/builders/: __init__.py  base.py  fetch_huggingface.py  manager.py  onnxruntime_bundle.py  triton_onnx.py  triton_repo.py
src/scindo_models/inference_engine/: base.py  factory.py
src/scindo_models/inference_engine/onnxruntime/: __init__.py  session.py
src/scindo_models/models/: base.py  factory.py
src/scindo_models/models/pp_doclayout_v3/: __init__.py  model.py
