[project]
name = "scindo-models"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.23",
    "numpy>=1.24",
    "opencv-python-headless>=4.9,<5",
    "pydantic>=2.0",
    "tomli>=2.0.1",
]

[project.optional-dependencies]
onnxruntime-cpu = [
    "onnxruntime>=1.18",
]
onnxruntime-trt = []

[project.scripts]
scindo-models = "scindo_models.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
extend-select = [
    "PLC0415",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
